orignal#001-1 -update 2-1 go to EMSW_UI todo

--- a/data/windows_config.json
+++ b/data/windows_config.json
@@ -1,1 +1,1 @@
-{"windows_pos_x": 100, "windows_pos_y": 100, "windows_scale_width": 800, "windows_scale_height": 650, "language": "ko", "model": "GPT-OSS:20b", "project directory": "./ProgrameData"}
+{"windows_pos_x": 1130, "windows_pos_y": 458, "windows_scale_width": 800, "windows_scale_height": 650, "language": "ko", "model": "GPT-OSS:20b", "treeview_width": 160.0}
