--- a/data/ProjectDirectories.json
+++ b/data/ProjectDirectories.json
@@ -1,1 +1,1 @@
-{"ProjectDirs": ["C:\\Users"], "LastOpenDir": "C:\\Users"}
+{"ProjectDirs": ["C:\\Users", "D:/Test Project/\uc6f9\uc18c\uc124"], "LastOpenDir": "D:/Test Project/\uc6f9\uc18c\uc124"}
