--- a/data/ProjectDirectories.json
+++ b/data/ProjectDirectories.json
@@ -1,1 +1,1 @@
-{"ProjectDirs": ["C:\\Users", "D:/Test Project/\uc6f9\uc18c\uc124"], "LastOpenDir": "D:/Test Project/\uc6f9\uc18c\uc124"}
+{"ProjectDirs": ["C:\\Users", "D:/Test Project/\uc6f9\uc18c\uc124", "C:/Users/asuna/OneDrive/\ubb38\uc11c/\ud14c\uc2a4\ud2b8 \ud3f4\ub354/test"], "LastOpenDir": "C:/Users/asuna/OneDrive/\ubb38\uc11c/\ud14c\uc2a4\ud2b8 \ud3f4\ub354/test"}
