Error Fix, when Create Project, Can not make Project json, and wrong Directory control json file.

--- a/data/ProjectDirectories_mac.json
+++ b/data/ProjectDirectories_mac.json
@@ -1,1 +1,1 @@
-{"ProjectDirs": ["~/Documents"], "LastOpenDir": "~/Documents"}
+{"ProjectDirs": ["~/Documents", "/Volumes/develop/Test/Pro 1"], "LastOpenDir": "/Volumes/develop/Test/Pro 1"}
